tests/fail/shims/shim_arg_size.64bit.stderr
error: Undefined Behavior: scalar size mismatch: expected 8 bytes but got 4 bytes instead
  --> $DIR/shim_arg_size.rs:LL:CC
   |
LL |         let _p1 = malloc(42);
   |                   ^^^^^^^^^^ scalar size mismatch: expected 8 bytes but got 4 bytes instead
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/shim_arg_size.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

